--- a/src/front/spaces-list.html
+++ b/src/front/spaces-list.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" ng-app="freeWorkingApp">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script type="text/javascript" src="js/searchFilterCtrl.js"></script>
   </head>
-  <body>
+  <body ng-controller="SearchController as searchCtrl">
 
     <!-- Start Top Bar -->
     <div class="top-bar">
@@ -103,7 +105,7 @@
     </div>
 
 
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/foundation.js"></script>
     <script>
       $(document).foundation();
