--- a/src/front/space-file.html
+++ b/src/front/space-file.html
@@ -13,8 +13,12 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text">FREEWORK</li>
-          <li><a href="#">Pero esto qué es</a></li>
+          <li class="topbar-title">
+            <a href="index.html" class="logo">
+              <img alt="ZURB" src="img/logo-freeworking.png" width="230">
+            </a>
+          </li>
+          <li><a href="#">¿Qué es esto?</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
@@ -171,7 +175,7 @@
         </ul>
       </div>
         <div class="row medium-8 large-7 columns">
-            <a href="confirmacion.html" class="button large">Me apunto!</a>    
+            <a href="confirmacion.html" class="button large">Me apunto!</a>
         </div>
     </div>
 
