--- a/src/front/spaces-list.html
+++ b/src/front/spaces-list.html
@@ -61,13 +61,14 @@
     </div>
 
     <div class="row small-up-2 large-up-3">
-      <div class="column">
+      <div class="column" ng-repeat="space in results track by $index">
         <img class="thumbnail" src="https://i.ytimg.com/vi/4Nql1g-rWvY/maxresdefault.jpg">
-        <h5>Freehouse Oviedo</h5>
-        <p>Oviedo</p>
+        <h5>{{space.name}}</h5>
+        <p>{{space.city}}</p>
         <a href="#" class="button expanded">Currar aquí</a>
       </div>
-      <div class="column">
+    </div>
+<!--      <div class="column">
         <img class="thumbnail" src="https://i.ytimg.com/vi/4Nql1g-rWvY/maxresdefault.jpg">
         <h5>Freehouse Oviedo</h5>
         <p>Oviedo</p>
@@ -98,6 +99,7 @@
         <a href="#" class="button expanded">Currar aquí</a>
       </div>
     </div>
+-->
     <div class="row">
       <div class="column centered">
         <a href="#" class="button expanded">Quiero ver unos cuantos más</a>
