--- a/src/front/space-file.html
+++ b/src/front/space-file.html
@@ -43,7 +43,7 @@
         <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
         <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
         <li class="orbit-slide is-active">
-          <img src="http://placehold.it/2000x750">
+          <img src="img/ranacowork.jpg">
         </li>
         <li class="orbit-slide">
           <img src="http://placehold.it/2000x750">
