--- a/src/front/spaces-list.html
+++ b/src/front/spaces-list.html
@@ -65,7 +65,7 @@
         <img class="thumbnail" src="https://i.ytimg.com/vi/4Nql1g-rWvY/maxresdefault.jpg">
         <h5>{{space.name}}</h5>
         <p>{{space.city}}</p>
-        <a href="#" class="button expanded">Currar aquí</a>
+        <a href="file:///home/josarpval/tests/freeCooworking/src/front/space-file.html?param={{space._id}}" class="button expanded">Currar aquí</a>
       </div>
     </div>
 <!--      <div class="column">
