--- a/src/front/space-file.html
+++ b/src/front/space-file.html
@@ -1,14 +1,18 @@
-<!doctype html>
-<html class="no-js" lang="en">
+  <!doctype html>
+<html class="no-js" lang="en" ng-app="freeWorkingApp">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script type="text/javascript" src="js/searchFilterCtrl.js"></script>
   </head>
-  <body>
+  <body ng-controller="SearchController as searchCtrl">
+  <script type="text/javascript">
 
+  </script>
     <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
@@ -31,9 +35,9 @@
     <!-- End Top Bar -->
 
     <div class="callout large secondary">
-      <div class="row column text-center">
-        <h1>Freehouse</h1>
-        <h2 class="docs-heading">Oviedo <span class="small">(a 1km.)</span></h2>
+      <div class="row column text-center" ng-repeat="space in results track by $index">
+        <h1>{{space.name}}</h1>
+        <h2 class="docs-heading"><span class="small">{{space.adress}}</span></h2>
       </div>
     </div>
 
